# LearnConnectPro

./: .replit  app.py  auth.py  content_manager.py  database.py  elearning.db  encryption.py  pyproject.toml  replit.nix  secure_key.key  test_app.py  test_connection.py  translations.py  utils.py  zouhair_elearning.db
.streamlit/: config.toml
attached_assets/: Pasted--Secure-E-Learning-Logged-in-as-admin-Role-admin-Navigation-Admin-Dashboard-C-1743683162759.txt  Pasted-I-want-you-to-develop-a-comprehensive-e-learning-application-using-Streamlit-in-Python-centered-on--1743682698869.txt  Pasted-Project-Overview-Zouhair-E-learning-is-an-online-educational-platform-where-Admins-Zouhair-ma-1743684864691.txt
components/: admin_dashboard.py  pdf_viewer.py  student_dashboard.py  ui.py  video_player.py
styles/: custom.css
uploads/encrypted/: 1.pdf.enc  1727357683263.pdf.enc  F7Rz99SArB_LE.pdf.enc  LE.pdf.enc  aze.pdf.enc
